crates/banshee_format/tests/snapshots/snapshots__alter_table_multi_action.snap
---
source: crates/banshee_format/tests/snapshots.rs
expression: formatted
---
ALTER TABLE users
    ADD COLUMN age INT NOT NULL DEFAULT 0,
    DROP COLUMN legacy,
    ALTER COLUMN name TYPE TEXT
