crates/banshee_format/tests/snapshots/snapshots__alter_table_rename.snap
---
source: crates/banshee_format/tests/snapshots.rs
expression: formatted
---
ALTER TABLE users RENAME COLUMN email TO email_address
