crates/banshee_format/tests/snapshots/snapshots__array_expression.snap
---
source: crates/banshee_format/tests/snapshots.rs
expression: formatted
---
SELECT *
FROM users
WHERE id = ANY(ARRAY[1, 2, 3])
