crates/banshee_format/tests/snapshots/snapshots__cast_expression.snap
---
source: crates/banshee_format/tests/snapshots.rs
expression: formatted
---
SELECT id::TEXT, CAST(amount AS NUMERIC(10,2))
FROM orders
