crates/banshee_format/tests/snapshots/snapshots__coalesce_nullif.snap
---
source: crates/banshee_format/tests/snapshots.rs
expression: formatted
---
SELECT COALESCE(name, 'Unknown'), NULLIF(status, 'deleted')
FROM users
