crates/banshee_format/tests/snapshots/snapshots__complex_where.snap
---
source: crates/banshee_format/tests/snapshots.rs
expression: formatted
---
SELECT *
  FROM users
 WHERE (active = true AND role = 'admin')
    OR (created_at > '2024-01-01' AND status <> 'deleted')
